Without ssl/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-ingress
  namespace: dev
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/tags: app=devopsanu,Team=devops
spec:
  ingressClassName: alb
  rules:
    - host: nginx-app-dev.devopsanu.com
      http:
        paths:
          - path: /index.html
            pathType: Exact
            backend:
              service:
                name: nginx-app
                port:
                  number: 80
    - host: nginx-app-qa.devopsanu.com
      http:
        paths:
          - path: /index.html
            pathType: Exact
            backend:
              service:
                name: nginx-app
                port:
                  number: 80
